--- a/css/main.css
+++ b/css/main.css
@@ -97,15 +97,20 @@ textarea {
 
 /*Large Background Image*/
 html {
-  background: url(../img/bkgd2.jpg) no-repeat center center fixed;
+  background: url(../img/bg.jpg) no-repeat center center fixed;
+  height: 100%
    /* set height to 100% - these are important for allowing content to vertically align */
 }
 
 body {
+  height: 100%
   /* set height to 100% - these are important for allowing content to vertically align */
 }
 
 .wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   /* set the display to flex and use the justify-content & align-items properties to center all child elements on the page */
   margin: 0;
   height: 100%;
@@ -113,14 +118,17 @@ body {
 }
 
 #content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   /* set the display to flex and use the justify-content & align-items properties to center the text within the div*/
-  background: #222;
-  background:rgba(0,0,0,0.7);
+  background: transparent;
   color: #fff;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 300;
-  font-size: 1.25em;
-  line-height: 1.5em;
+  font-family: freight-display-pro, sans-serif;
+  font-weight: 500;
+  font-size: 5.25em;
+  text-align: center;
+  line-height: 1em;
   border-radius: 10px;
   padding: 0px 30px;
   width: 300px;
